# AiogramTemplate

./: .env  .env-example  .gitignore  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
alembic/: env.py
app/: .env-example  __init__.py  __main__.py  requirements.txt
app/core/: __init__.py  loader.py  settings.py
app/database/: converters.py
app/keyboards/: inline.py
app/routers/: __init__.py  error.py  other.py
app/utils/: __init__.py  admin.py  logger.py  other.py  pagination.py  polling_manager.py
data/: bot_commands.json
database/: __init__.py  converters.py  database.db  databases.py  db.py
database/core/: __init__.py  connection.py  database.py  mediator.py  unit_of_work.py
database/dto/: __init__.py
database/migrations/: env.py
database/models/: __init__.py  question.py  settings.py  user.py
database/repositories/: __init__.py  base.py  crud.py  question.py  settings.py  user.py
filters/: __init__.py  main.py
handlers/: __init__.py
handlers/admin/: __init__.py  main.py
handlers/error/: __init__.py  error.py
handlers/main/: __init__.py  main.py
keyboards/: inline.py
middlewares/: __init__.py  main.py
migrations/: env.py
misc/: loader.py  polling_manager.py  states.py  types.py
src/: Dockerfile
src/apps/: telethon.py
src/backend/: Dockerfile
src/bot/: __main__.py  keyboards.py
src/common/: types.py
src/config/: __init__.py  settings.py
telegram_bot/: __init__.py  __main__.py
texts/: admin.py  main.py
(+240 files in other folders)
