[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "My Python project"
authors = ["Nazar <nazar.fedorowych@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
file = {path = "requirements.txt", optional = false}
